# westford14.github.io

./: ._config.yml.swp  .gitignore  LICENSE  README.md  _config.yml  about.md  blog.html  index.html  lets_work.html  logger.py  main.py  mypy.ini  pyproject.toml  requirements.txt  resume.html  tox.ini
.github/: pull_request_template.md
.github/workflows/: base-ci.yaml
_includes/_site/: meta.html
_posts/: 2018-05-16-bayesian-nets.md  2018-05-16-transfer-learning.md  2018-05-17-ensemble.md  2018-05-17-luigi.md
_posts/_site/: 2018-05-16-bayesian-nets.html  2018-05-16-transfer-learning.html  2018-05-17-ensemble.html  2018-05-17-luigi.html
_site/: 404.html  feed.xml  index.html  sitemap.xml
_site/about/: index.html
_site/bayesian-nets/: index.html
_site/ensemble/: index.html
_site/luigi/: index.html
_site/transfer-learning/: index.html
blog_posts/: README.md  requirements.txt
blog_posts/logistic_chatgpt/: pt_2.ipynb
blog_posts/pyro_chatgpt/: part_4.ipynb
blog_posts/torch_chatgpt/: part_3.ipynb
